--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-start",
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3111",
     "build": "next build",
     "start": "next start"
   },
@@ -18,6 +18,7 @@
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
+    "lodash": "^4.17.20",
     "lqip-loader": "^2.2.1",
     "next": "^9.5.3",
     "next-compose-plugins": "^2.2.0",
